--- a/taskmaster/src/main/resources/templates/register.html
+++ b/taskmaster/src/main/resources/templates/register.html
@@ -8,7 +8,8 @@
         <form class="text-black"
               th:method="post"
               th:action="@{/users/register}"
-              th:object="${registerData}">
+              th:object="${registerData}"
+              enctype="multipart/form-data">
             <div class="mb-4">
                 <label th:text="#{username_label}" th:for="username" class="block text-black text-sm font-medium mb-2">Username</label>
                 <input th:field="*{username}"
@@ -21,7 +22,8 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:text="#{full_name_label}" th:for="fullName" class="block text-black text-sm font-medium mb-2">Full Name</label>
+                <label th:text="#{full_name_label}" th:for="fullName" class="block text-black text-sm font-medium mb-2">Full
+                    Name</label>
                 <input th:field="*{fullName}"
                        required minlength="5" maxlength="20"
                        type="text" id="fullName" name="fullName" th:placeholder="#{full_name_placeholder}"
@@ -32,7 +34,8 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:text="#{email_label}" th:for="email" class="block text-black text-sm font-medium mb-2">Email</label>
+                <label th:text="#{email_label}" th:for="email"
+                       class="block text-black text-sm font-medium mb-2">Email</label>
                 <input th:field="*{email}"
                        required
                        type="email" id="email" name="email" th:placeholder="#{email_placeholder}"
@@ -78,6 +81,14 @@
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
             </div>
+            <div class="flex flex-col items-center justify-center w-full h-full mt-2 mb-6 ">
+                <img aria-hidden="true" id="profilePicturePreview" alt="profile-picture"
+                     th:src="@{/images/default-profile-picture.png}"
+                     class="w-24 h-24 rounded-full object-cover mb-4"/>
+                <input th:field="*{profilePicture}" type="file" id="profilePicture" class="hidden"/>
+                <label id="profilePicturePreviewLabel" th:for="profilePicture" class="cursor-pointer text-black">
+                    Upload from device </label>
+            </div>
             <button th:text="#{register_label}" type="submit"
                     class="w-full bg-primary text-primary-foreground py-2 rounded-lg hover:bg-primary/80 transition-colors duration-300">
                 Register
@@ -85,5 +96,19 @@
         </form>
     </div>
 </div>
+<script>
+    const profilePictureInput = document.getElementById('profilePicture');
+    const profilePicturePreview = document.getElementById('profilePicturePreview');
+    const profilePictureLabel = document.getElementById('profilePicturePreviewLabel');
+    profilePictureInput.onchange = () => {
+        if (profilePictureInput.files[0]) {
+            profilePicturePreview.src = URL.createObjectURL(profilePictureInput.files[0]);
+            profilePictureLabel.textContent = 'Change picture';
+        } else {
+            profilePicturePreview.src = '/images/default-profile-picture.png';
+            profilePictureLabel.textContent = 'Choose picture from device';
+        }
+    };
+</script>
 </body>
 </html>
