--- a/taskmaster/src/main/resources/templates/edit-user.html
+++ b/taskmaster/src/main/resources/templates/edit-user.html
@@ -73,6 +73,7 @@
                 <input th:field="*{profilePicture}" type="file" id="profilePicture" class="hidden"/>
                 <label id="profilePicturePreviewLabel" th:for="profilePicture" class="cursor-pointer text-black">
                     Upload from device </label>
+                <button type="button" onclick="setDefaultPicture()" class="mt-4">Use default picture</button>
             </div>
             <button type="submit"
                     class="bg-primary text-primary-foreground py-3 px-4 rounded-lg hover:bg-primary/80 transition-colors duration-300 ml-0 mt-2">
@@ -81,19 +82,6 @@
         </form>
     </div>
 </div>
-<script>
-    const profilePictureInput = document.getElementById('profilePicture');
-    const profilePicturePreview = document.getElementById('profilePicturePreview');
-    const profilePictureLabel = document.getElementById('profilePicturePreviewLabel');
-    profilePictureInput.onchange = () => {
-        if (profilePictureInput.files[0]) {
-            profilePicturePreview.src = URL.createObjectURL(profilePictureInput.files[0]);
-            profilePictureLabel.textContent = 'Change picture';
-        } else {
-            profilePicturePreview.src = '/images/default-profile-picture.png';
-            profilePictureLabel.textContent = 'Choose picture from device';
-        }
-    };
-</script>
+<script th:src="@{/js/profile-picture.js}"></script>
 </body>
 </html>
