--- a/mail-sender/src/main/resources/templates/registration-admin-email.html
+++ b/mail-sender/src/main/resources/templates/registration-admin-email.html
@@ -40,6 +40,9 @@
     <div class="bg-gray-100 text-gray-600 text-center py-4 text-sm">
         <p>Best regards,<br>TaskMaster Admin Team</p>
     </div>
+    <div>
+        <p>&copy; 2024 TaskMaster. All rights reserved.</p>
+    </div>
 </div>
 </body>
 </html>
