--- a/mail-sender/src/main/resources/templates/registration-user-email.html
+++ b/mail-sender/src/main/resources/templates/registration-user-email.html
@@ -13,11 +13,15 @@
     </div>
     <div class="p-6">
         <h1 th:assert="${USERNAME} != null" th:text="${'Hi ' + USERNAME}"
-                class="text-xl font-semibold text-gray-800">Hi [User's First Name],</h1>
+            class="text-xl font-semibold text-gray-800">Hi [User's First Name],</h1>
         <p>Welcome to <strong>TaskMaster</strong>! We’re excited to have you.</p>
-        <p>TaskMaster offers a wide range of features to help you manage your tasks efficiently and connect with others. Whether you're looking to save tasks for better organization or ask questions on our forum for community support, we've got you covered.</p>
-        <p>Our app is designed to be intuitive and easy to use, so you can get started right away without any hassle. Take some time to explore and personalize your settings to make the most out of your experience.</p>
-        <p>We're committed to providing you with the best experience possible. If you ever need assistance or have any questions, our team is here to support you.</p>
+        <p>TaskMaster offers a wide range of features to help you manage your tasks efficiently and connect with others.
+            Whether you're looking to save tasks for better organization or ask questions on our forum for community
+            support, we've got you covered.</p>
+        <p>Our app is designed to be intuitive and easy to use, so you can get started right away without any hassle.
+            Take some time to explore and personalize your settings to make the most out of your experience.</p>
+        <p>We're committed to providing you with the best experience possible. If you ever need assistance or have any
+            questions, our team is here to support you.</p>
         <p>Thank you for joining us! We look forward to helping you stay organized and connected.</p>
         <div class="text-center mt-6">
             <a href="#">Get Started</a>
@@ -26,6 +30,9 @@
     <div>
         <p>Best regards,<br>TaskMaster Team</p>
     </div>
+</div>
+<div>
+    <p>&copy; 2024 TaskMaster. All rights reserved.</p>
 </div>
 </body>
 </html>
