Edit templates and add event listener for new registration (only for user at this moment)

--- a/mail-sender/src/main/resources/templates/contact-us.html
+++ b/mail-sender/src/main/resources/templates/contact-us.html
@@ -8,8 +8,8 @@
 <body>
 <div>
     <div th:assert="${EMAIL} != null" th:text="${'User email: ' + EMAIL}"></div>
-    <div th:assert="${TITLE} != null" th:text="${'User email title: ' + TITLE}"></div>
-    <div>User message:</div>
+    <br>
+    <!--    <div>User message:</div>-->
     <div th:assert="${MESSAGE} != null" th:text="${MESSAGE}"></div>
 </div>
 <div>
