--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -63,6 +63,14 @@
                 <li class="px-4 py-2"><a th:text="#{edit_label}" th:href="@{/users/edit}">Edit data</a></li>
                 <li class="px-4 pb-2"><a th:text="#{change_password_label}" th:href="@{/users/change-password}">Change
                     password</a></li>
+                <li class="px-4 pb-2">
+                    <form th:method="delete" th:action="@{/users/close-account}">
+                        <button type="button" th:text="#{nav_delete_profile}"
+                                onclick="if(confirm('Are you sure you want to close your account')) this.form.submit()">
+                            Delete profile
+                        </button>
+                    </form>
+                </li>
             </ul>
         </div>
         <form sec:authorize="isAuthenticated()"
