--- a/taskmaster/src/main/resources/templates/statistics.html
+++ b/taskmaster/src/main/resources/templates/statistics.html
@@ -12,59 +12,49 @@
 </head>
 <body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
-<div class="bg-background text-primary-foreground py-12 px-4 sm:px-6 lg:px-8">
-    <div class="max-w-7xl mx-auto" >
+<div class="bg-background text-primary-foreground py-12 px-4 sm:px-6 lg:px-8" th:object="${statisticsData}">
+    <div class="max-w-7xl mx-auto">
         <h2 class="text-black text-3xl font-bold text-center mb-8">App Statistics</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <div class="bg-card p-6 rounded-lg shadow-lg text-black relative">
                 <h3 class="text-xl font-semibold mb-2">Users Registered</h3>
-                <p class="text-2xl font-bold">1,234</p>
-                <button class="absolute bottom-4 right-4 bg-primary text-primary-foreground px-4 py-2 rounded-md hover:bg-primary/80">
+                <p th:text="*{usersCount}" class="text-2xl font-bold">1,234</p>
+                <a th:href="@{/users}"
+                   class="absolute bottom-4 right-4 bg-primary text-primary-foreground px-4 py-2 rounded-md hover:bg-primary/80">
                     View All
-                </button>
+                </a>
             </div>
             <div class="bg-card p-6 rounded-lg shadow-lg text-black relative">
                 <h3 class="text-xl font-semibold mb-2">Admin Users</h3>
-                <p class="text-2xl font-bold">456</p>
-                <button class="absolute bottom-4 right-4 bg-primary text-primary-foreground px-4 py-2 rounded-md hover:bg-primary/80">
-                    View All
-                </button>
+                <p th:text="*{adminUsersCount}" class="text-2xl font-bold" id="admin-users-count">10</p>
             </div>
             <div class="bg-card p-6 rounded-lg shadow-lg text-black relative">
                 <h3 class="text-xl font-semibold mb-2">Regular Users</h3>
-                <p class="text-2xl font-bold">778</p>
-                <button class="absolute bottom-4 right-4 bg-primary text-primary-foreground px-4 py-2 rounded-md hover:bg-primary/80">
-                    View All
-                </button>
+                <p th:text="*{regularUsersCount}" class="text-2xl font-bold" id="regular-users-count">20</p>
             </div>
             <div class="bg-card p-6 rounded-lg shadow-lg text-black">
-                <h3 class="text-xl font-semibold mb-2">Personal Tasks Created</h3>
-                <p class="text-2xl font-bold">3,456</p>
+                <h3 class="text-xl font-semibold mb-2">Tasks Created</h3>
+                <p th:text="*{tasksCount}" class="text-2xl font-bold" id="tasks-count">3,456</p>
             </div>
             <div class="bg-card p-6 rounded-lg shadow-lg text-black">
-                <h3 class="text-xl font-semibold mb-2">Open Tasks Created</h3>
-                <p class="text-2xl font-bold">2,222</p>
+                <h3 class="text-xl font-semibold mb-2">Questions asked</h3>
+                <p th:text="*{questionsCount}" class="text-2xl font-bold" id="questions-count">2,222</p>
             </div>
             <div class="bg-card p-6 rounded-lg shadow-lg text-black">
-                <h3 class="text-xl font-semibold mb-2">Comments Posted</h3>
-                <p class="text-2xl font-bold">9,012</p>
+                <h3 class="text-xl font-semibold mb-2">Answer Posted</h3>
+                <p th:text="*{answersCount}" class="text-2xl font-bold">9,012</p>
             </div>
         </div>
     </div>
 </div>
-    <div id="charts" class="flex  ">
-        <div id="users-roles-donutchart" class="chart"></div>
-        <div id="tasks-types-donutchart" class="chart"></div>
-    </div>
+<div id="charts" class="flex  ">
+    <div id="users-roles-donutchart" class="chart"></div>
+    <div id="tasks-types-donutchart" class="chart"></div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script th:src="@{/js/statistics-pie-chart.js}"></script>
-<script>
-    $(window).resize(function(){
-        drawTaksChart();
-    });
-</script>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
 </html>
